--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "pakamew",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "lint": "eslint ."
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.39.1",
-    "@types/node": "^24.10.1",
-    "eslint": "^9.39.1",
-    "eslint-plugin-react-dom": "^2.11.0",
-    "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-react-refresh": "^0.4.24",
-    "eslint-plugin-react-x": "^2.11.0",
-    "globals": "^16.5.0",
-    "typescript": "~5.9.3",
-    "typescript-eslint": "^8.46.4"
-  },
-  "pnpm": {
-    "overrides": {
-      "vite": "npm:rolldown-vite@7.2.5"
-    }
-  }
+	"name": "pakamew",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"eslint": "eslint ./src",
+		"eslint:fix": "eslint ./src --fix",
+		"prettier": "prettier --check .",
+		"prettier:write": "prettier --write ."
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.39.1",
+		"@types/node": "^24.10.1",
+		"eslint": "^9.39.1",
+		"eslint-plugin-react-dom": "^2.11.0",
+		"eslint-plugin-react-hooks": "^7.0.1",
+		"eslint-plugin-react-refresh": "^0.4.24",
+		"eslint-plugin-react-x": "^2.11.0",
+		"eslint-config-prettier": "^10.1.5",
+		"globals": "^16.5.0",
+		"typescript": "~5.9.3",
+		"typescript-eslint": "^8.46.4",
+		"@ianvs/prettier-plugin-sort-imports": "^4.4.1",
+		"prettier": "3.5.3",
+		"prettier-plugin-tailwindcss": "^0.6.11"
+	},
+	"pnpm": {
+		"overrides": {
+			"vite": "npm:rolldown-vite@7.2.5"
+		}
+	}
 }
