--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
 		"globals": "^16.5.0",
 		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.46.4",
-		"@ianvs/prettier-plugin-sort-imports": "^4.4.1",
-		"prettier": "3.5.3",
-		"prettier-plugin-tailwindcss": "^0.6.11"
+		"@ianvs/prettier-plugin-sort-imports": "^4.7.1",
+		"prettier": "^3.8.1",
+		"prettier-plugin-tailwindcss": "^0.7.2"
 	},
 	"pnpm": {
 		"overrides": {
