fix(ci): use built-in installation in pnpm github action

--- a/.github/setup/action.yml
+++ b/.github/setup/action.yml
@@ -6,9 +6,8 @@ runs:
     - uses: pnpm/action-setup@master
       with:
         version: 10
+        run_install: true
         cache: true
     - uses: actions/setup-node@v6
       with:
         node-version: 22
-    - run: pnpm ci
-      shell: bash
