--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -28,7 +28,7 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - uses: ./.github/setup
-      - run: pnpm run lint
+      - run: pnpm run eslint
 
   commitlint:
     name: CommitLint
