--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - uses: ./.github/setup
-      - run: pnpm run tscheck
+      - run: pnpm tscheck
 
   prettier:
     name: Prettier
@@ -20,7 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - uses: ./.github/setup
-      - run: pnpm run prettier
+      - run: pnpm prettier
 
   eslint:
     name: ESLint
@@ -28,7 +28,7 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - uses: ./.github/setup
-      - run: pnpm run eslint
+      - run: pnpm eslint
 
   commitlint:
     name: CommitLint
