--- a/server/tsconfig.node.json
+++ b/server/tsconfig.node.json
@@ -20,7 +20,9 @@
 		"noUnusedParameters": true,
 		"erasableSyntaxOnly": true,
 		"noFallthroughCasesInSwitch": true,
-		"noUncheckedSideEffectImports": true
+		"noUncheckedSideEffectImports": true,
+
+		"composite": true
 	},
-	"include": ["../web/vite.config.ts"]
+	"include": ["../**/*.config.ts", "src"]
 }
