--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,21 @@
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
-	"scripts": {},
-	"dependencies": {},
-	"devDependencies": {}
+	"exports": {
+		"./api": {
+			"types": "./src/api/index.ts"
+		}
+	},
+	"scripts": {
+		"dev": "vite",
+		"preview": "tsx src/main.ts"
+	},
+	"dependencies": {
+		"@orpc/server": "^1.13.5"
+	},
+	"devDependencies": {
+		"tsx": "^4.21.0",
+		"vite": "npm:rolldown-vite@7.2.5",
+		"vite-plugin-node": "^7.0.0"
+	}
 }
