--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@pakamew/server": "workspace:*",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0"
 	},
