--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - uses: ./.github/setup
-      - run: pnpm tscheck
+      - run: pnpm tsgo:check
 
   prettier:
     name: Prettier
