--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"eslint:fix": "eslint . --fix",
 		"prettier": "prettier --check .",
 		"prettier:write": "prettier --write .",
-		"tscheck": "tsc -b --noEmit",
+		"tsc:check": "tsc -b --noEmit",
+		"tsgo:check": "tsgo -b --noEmit",
 		"commitlint": "commitlint --edit",
 		"prepare": "husky"
 	},
@@ -29,6 +30,7 @@
 		"@ianvs/prettier-plugin-sort-imports": "^4.7.1",
 		"@orpc/client": "^1.13.5",
 		"@types/node": "^24.10.1",
+		"@typescript/native-preview": "7.0.0-dev.20260222.1",
 		"eslint": "^9.39.1",
 		"eslint-config-prettier": "^10.1.5",
 		"eslint-plugin-react-dom": "^2.11.0",
