--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,8 @@
+# shellcheck shell=sh
+# shellcheck disable=SC2034
+# ^^ Added the rules above to suppress unrelated shell warnings
+
 NODE_ENV=development
+DATABASE_URL="postgresql://pakamew:pakamew@localhost:5432/pakamew?schema=public"
 HOST=127.0.0.1
 PORT=3000
