--- a/server/package.json
+++ b/server/package.json
@@ -11,12 +11,23 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "node --enable-source-maps dist/main.js"
+		"preview": "node --enable-source-maps dist/main.js",
+		"prisma:generate": "prisma generate",
+		"prisma:migrate:dev": "prisma migrate dev",
+		"prisma:migrate:deploy": "prisma migrate deploy",
+		"prisma:db:push": "prisma db push",
+		"prisma:studio": "prisma studio"
 	},
 	"dependencies": {
-		"@orpc/server": "^1.13.5"
+		"@orpc/server": "^1.13.5",
+		"@prisma/adapter-pg": "^7.4.1",
+		"@prisma/client": "^7.4.1",
+		"pg": "^8.18.0"
 	},
 	"devDependencies": {
+		"@types/node": "^24.10.11",
+		"@types/pg": "^8.16.0",
+		"prisma": "^7.4.1",
 		"tsx": "^4.21.0",
 		"vite": "npm:rolldown-vite@7.2.5",
 		"vite-plugin-node": "^7.0.0"
