chore: pin version for postgres dev container and explain pnpm GH-action version

--- a/.github/setup/action.yml
+++ b/.github/setup/action.yml
@@ -6,6 +6,7 @@ runs:
     - uses: actions/setup-node@v6
       with:
         node-version: 22
+    # Intentionally pinned to @master until upstream cache behavior is fixed in a release.
     - uses: pnpm/action-setup@master
       with:
         version: 10
