--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
 	"version": "0.0.0",
 	"scripts": {
 		"build": "pnpm -r --parallel --filter @pakamew/web --filter @pakamew/server run build",
+		"build:server": "pnpm --filter @pakamew/server run build",
+		"build:web": "pnpm --filter @pakamew/web run build",
 		"dev:server": "pnpm --filter @pakamew/server run dev",
 		"dev:web": "pnpm --filter @pakamew/web run dev",
 		"preview:server": "pnpm --filter @pakamew/server run preview",
@@ -12,6 +14,8 @@
 		"eslint:fix": "eslint . --fix",
 		"prettier": "prettier --check .",
 		"prettier:write": "prettier --write .",
+		"test": "vitest run",
+		"test:watch": "vitest",
 		"tsc:check": "tsc -b --noEmit",
 		"tsgo:check": "tsgo -b --noEmit",
 		"commitlint": "commitlint --edit",
@@ -45,14 +49,17 @@
 		"prettier": "^3.8.1",
 		"prettier-plugin-tailwindcss": "^0.7.2",
 		"typescript": "~5.9.3",
-		"typescript-eslint": "^8.46.4"
+		"typescript-eslint": "^8.46.4",
+		"vitest": "^4.0.18"
 	},
 	"pnpm": {
 		"overrides": {
 			"vite": "npm:rolldown-vite@7.2.5"
 		},
 		"onlyBuiltDependencies": [
-			"esbuild"
+			"@prisma/engines",
+			"esbuild",
+			"prisma"
 		]
 	},
 	"dependencies": {
