feat: reorganize monorepo structure

--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
 		"*": [
 			"pnpm prettier:write"
 		],
-		"*.{ts,tsx,cts,mts,d.ts,d.cts,d.mts}": [
-			"pnpm eslint",
-			"pnpm tscheck"
+		"*.{ts,tsx,cts,mts}": [
+			"pnpm eslint"
 		]
 	},
 	"devDependencies": {
