--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
 	"files": [],
-	"references": [{ "path": "./web/tsconfig.app.json" }, { "path": "./server/tsconfig.node.json" }]
+	"references": [
+		{ "path": "./packages/app-web/tsconfig.app.json" },
+		{ "path": "./packages/app-server/tsconfig.node.json" }
+	]
 }
