feat: add better-auth

--- a/packages/app-server/.env.example
+++ b/packages/app-server/.env.example
@@ -3,6 +3,11 @@
 # ^^ Added the rules above to suppress unrelated shell warnings
 
 NODE_ENV=development
+
 DATABASE_URL="postgresql://pakamew:pakamew@localhost:5432/pakamew?schema=public"
+
+BETTER_AUTH_SECRET=secret
+BETTER_AUTH_URL=http://localhost:3000
+
 HOST=127.0.0.1
 PORT=3000
