feat(server): add hono.js http framework

--- a/packages/app-server/package.json
+++ b/packages/app-server/package.json
@@ -11,7 +11,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "node --enable-source-maps dist/main.js",
+		"preview": "node --enable-source-maps dist/main.node.js",
 		"prisma:generate": "prisma generate",
 		"prisma:migrate:dev": "prisma migrate dev",
 		"prisma:migrate:deploy": "prisma migrate deploy",
@@ -19,10 +19,12 @@
 		"prisma:studio": "prisma studio"
 	},
 	"dependencies": {
+		"@hono/node-server": "^1.19.9",
 		"@orpc/server": "^1.13.5",
 		"@prisma/adapter-pg": "^7.4.1",
 		"@prisma/client": "^7.4.1",
 		"better-auth": "^1.4.19",
+		"hono": "^4.12.3",
 		"pg": "^8.18.0"
 	},
 	"devDependencies": {
