--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
 			"vite": "npm:rolldown-vite@7.2.5"
 		},
 		"onlyBuiltDependencies": [
+			"@prisma/client",
 			"@prisma/engines",
+			"better-sqlite3",
 			"esbuild",
 			"prisma"
 		]
