--- a/packages/app-web/package.json
+++ b/packages/app-web/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@pakamew/server": "workspace:*",
+		"@pakamew/shared": "workspace:*",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0"
 	},
