--- a/package.json
+++ b/package.json
@@ -29,12 +29,17 @@
 			"pnpm eslint"
 		]
 	},
+	"dependencies": {
+		"better-auth": "^1.4.19",
+		"@orpc/client": "^1.13.5",
+		"dotenv": "^17.3.1",
+		"zod": "^4.3.6"
+	},
 	"devDependencies": {
 		"@commitlint/cli": "^20.4.1",
 		"@commitlint/config-conventional": "^20.4.1",
 		"@eslint/js": "^9.39.1",
 		"@ianvs/prettier-plugin-sort-imports": "^4.7.1",
-		"@orpc/client": "^1.13.5",
 		"@types/node": "^24.10.1",
 		"@typescript/native-preview": "7.0.0-dev.20260222.1",
 		"eslint": "^9.39.1",
@@ -63,9 +68,5 @@
 			"esbuild",
 			"prisma"
 		]
-	},
-	"dependencies": {
-		"dotenv": "^17.3.1",
-		"zod": "^4.3.6"
 	}
 }
