--- a/packages/app-server/package.json
+++ b/packages/app-server/package.json
@@ -22,8 +22,10 @@
 		"@hono/node-server": "^1.19.9",
 		"@orpc/openapi": "^1.13.5",
 		"@orpc/server": "^1.13.5",
+		"@orpc/zod": "^1.13.5",
 		"@prisma/adapter-pg": "^7.4.1",
 		"@prisma/client": "^7.4.1",
+		"@scalar/hono-api-reference": "^0.9.46",
 		"hono": "^4.12.3",
 		"pg": "^8.18.0"
 	},
