--- a/packages/app-server/package.json
+++ b/packages/app-server/package.json
@@ -11,12 +11,7 @@
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
-		"preview": "node --enable-source-maps dist/main.node.js",
-		"prisma:generate": "prisma generate",
-		"prisma:migrate:dev": "prisma migrate dev",
-		"prisma:migrate:deploy": "prisma migrate deploy",
-		"prisma:db:push": "prisma db push",
-		"prisma:studio": "prisma studio"
+		"preview": "node --enable-source-maps dist/main.node.js"
 	},
 	"dependencies": {
 		"@hono/node-server": "^1.19.9",
